compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_int2.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array int2, 1..2 of int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( int2, range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
