compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_sizing_nat1.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : array nat1, 1..2 of int"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of array ( nat1, range of `int` (Unevaluated(PackageId(0), BodyId(0)) .. Expr(Unevaluated(PackageId(0), BodyId(1)), No)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

