compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_static_size.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type _ : array 1 .. 3 of int"
---
"_"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of array ( range of `int` (Unevaluated(PackageId(3072), BodyId(0)) .. Expr(Unevaluated(PackageId(3072), BodyId(1)), No)), ) of int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
