compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_assignment_valid_compound_add.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var lhs : real\nvar rhs : int\nlhs += rhs\n"
---
"lhs"@(FileId(1), 4..7) [ConstVar(Var, No)]: real
"rhs"@(FileId(1), 19..22) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

