compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_normal_discrim_select_ty.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "case 'c' of label 'c', 'd', 'e' end case"
---
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
